[package]
name = "os_proj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
psutil = "3.2.2"
sysinfo = "0.14.0"
procfs = "0.15.1"
nix = "0.26.2" 
clap = {version = "4.2.5" , features = ["derive"]}
inquire = "0.6.1"
tui = "0.19"
crossterm = "0.25"